# cc_matrix_channel

./: .gitignore  .mcp.json  .mcp.json.example  Cargo.toml  LICENSE  README.md  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release-rc.yml  release.yml
scripts/: launcher.ts
skills/access/: SKILL.md
skills/configure/: SKILL.md
src/: access.rs  config.rs  main.rs  matrix.rs  mcp.rs
